--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -20,25 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "96ed5e15-4e90-4c38-8608-d89568da538f",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e0afd0ab-be4b-4f41-99da-9e0fd92bda74",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "data = pd.read_csv('archive//Bells Palsy Clinical Trial.csv')"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "id": "e0afd0ab-be4b-4f41-99da-9e0fd92bda74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('artifacts\\\\data_ingestion\\\\Raw_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b570991e-d6a7-475c-8f40-25e02b5ea982",
    "metadata": {},
    "outputs": [
@@ -63,18 +65,18 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Patient ID</th>\n",
+       "      <th>PatientID</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Baseline Score on House–Brackmann scale</th>\n",
-       "      <th>Time between onset of symptoms and start of treatment</th>\n",
-       "      <th>Treatment Group</th>\n",
-       "      <th>Received Prednisolone</th>\n",
-       "      <th>Received Acyclovir</th>\n",
-       "      <th>3-Month Score on House–Brackmann scale</th>\n",
-       "      <th>Full Recovery in 3 Months</th>\n",
-       "      <th>9-Month Score on House–Brackmann scale</th>\n",
-       "      <th>Full Recovery in 9 Months</th>\n",
+       "      <th>HB_score</th>\n",
+       "      <th>timeOfTreatment</th>\n",
+       "      <th>Treatment_group</th>\n",
+       "      <th>got_Prednisolone</th>\n",
+       "      <th>got_Acyclovir</th>\n",
+       "      <th>HB_score_3mnths</th>\n",
+       "      <th>cured3mnths</th>\n",
+       "      <th>HB_score_9mnths</th>\n",
+       "      <th>cured9mnths</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -91,7 +93,7 @@
        "      <td>2</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
-       "      <td>No</td>\n",
+       "      <td>No\\r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -106,7 +108,7 @@
        "      <td>1</td>\n",
        "      <td>Yes</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Yes\\r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -121,7 +123,7 @@
        "      <td>1</td>\n",
        "      <td>Yes</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Yes\\r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -136,7 +138,7 @@
        "      <td>1</td>\n",
        "      <td>Yes</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Yes\\r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -151,50 +153,36 @@
        "      <td>1</td>\n",
        "      <td>Yes</td>\n",
        "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Yes\\r</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Patient ID     Sex  Age  Baseline Score on House–Brackmann scale  \\\n",
-       "0           1  Female   77                                        6   \n",
-       "1           2  Female   61                                        6   \n",
-       "2           3  Female   46                                        4   \n",
-       "3           4  Female   46                                        3   \n",
-       "4           5  Female   42                                        3   \n",
+       "   PatientID     Sex  Age  HB_score timeOfTreatment       Treatment_group  \\\n",
+       "0          1  Female   77         6    Within 24 hr  Prednisolone–Placebo   \n",
+       "1          2  Female   61         6    Within 24 hr  Prednisolone–Placebo   \n",
+       "2          3  Female   46         4   >24 to ≤48 hr  Prednisolone–Placebo   \n",
+       "3          4  Female   46         3    Within 24 hr  Prednisolone–Placebo   \n",
+       "4          5  Female   42         3   >24 to ≤48 hr  Prednisolone–Placebo   \n",
        "\n",
-       "  Time between onset of symptoms and start of treatment       Treatment Group  \\\n",
-       "0                                       Within 24 hr     Prednisolone–Placebo   \n",
-       "1                                       Within 24 hr     Prednisolone–Placebo   \n",
-       "2                                      >24 to ≤48 hr     Prednisolone–Placebo   \n",
-       "3                                       Within 24 hr     Prednisolone–Placebo   \n",
-       "4                                      >24 to ≤48 hr     Prednisolone–Placebo   \n",
+       "  got_Prednisolone got_Acyclovir  HB_score_3mnths cured3mnths  \\\n",
+       "0              Yes            No                2          No   \n",
+       "1              Yes            No                1         Yes   \n",
+       "2              Yes            No                1         Yes   \n",
+       "3              Yes            No                1         Yes   \n",
+       "4              Yes            No                1         Yes   \n",
        "\n",
-       "  Received Prednisolone Received Acyclovir  \\\n",
-       "0                   Yes                 No   \n",
-       "1                   Yes                 No   \n",
-       "2                   Yes                 No   \n",
-       "3                   Yes                 No   \n",
-       "4                   Yes                 No   \n",
-       "\n",
-       "   3-Month Score on House–Brackmann scale Full Recovery in 3 Months  \\\n",
-       "0                                       2                        No   \n",
-       "1                                       1                       Yes   \n",
-       "2                                       1                       Yes   \n",
-       "3                                       1                       Yes   \n",
-       "4                                       1                       Yes   \n",
-       "\n",
-       "   9-Month Score on House–Brackmann scale Full Recovery in 9 Months  \n",
-       "0                                       2                        No  \n",
-       "1                                       1                       Yes  \n",
-       "2                                       1                       Yes  \n",
-       "3                                       1                       Yes  \n",
-       "4                                       1                       Yes  "
+       "   HB_score_9mnths cured9mnths  \n",
+       "0                2        No\\r  \n",
+       "1                1       Yes\\r  \n",
+       "2                1       Yes\\r  \n",
+       "3                1       Yes\\r  \n",
+       "4                1       Yes\\r  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,8 +193,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b1958542-c194-421a-8206-80eaf93a5145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Within 24 hr', '>24 to ≤48 hr', '>48 to ≤72 hr', 'Unknown'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.timeOfTreatment.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b8572e70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No\\r', 'Yes\\r'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.cured9mnths.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf11db0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6089f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b930961a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1972,7 +2019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
